--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<%  if @article.error.any? %>
+<%  if @article.errors.any? %>
   <h2>The following errors prevented the article from getting created</h2>
   <ul>
       <% article.errors.full_messages.each do |msg| %>
