--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,6 @@
 <p>
   <%= @article.description %>
 </p>
+
+<%= link_to "Edit this article", edit_article_path(@article) %>|
+<%= link_to "Back to articles listing", articles_path %>
