--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <h1>This is the home page</h1>
 
 <%= link_to 'About', pages_about_path %>
-<%= link_to "Alpha Blog", articles_path %>
+<%= link_to "Blog", articles_path %>
