Add styles to Home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>This is the home page</h1>
-
-<%= link_to 'About', pages_about_path %>
-<%= link_to "Blog", articles_path %>
+<div class="jumbotron center">
+  <h1>Welcome to Blog</h1>
+  <p><a class="btn btn-primary btn-lg btn-xlarge" href="#" role="button">Sign up</a></p>
+</div>
