--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,8 @@ $navbar-default-bg: #000;
 .jumbotron {
   background-image: asset-url('cover_page.jpg');
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   height: 550px;
 }
 .jumbotron h1 {
