--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -23,7 +23,8 @@
           <%= link_to 'Show', article_path(article) %>
         </td>
         <td>
-          <%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %>
+          <%= link_to 'Delete', article_path(article),
+                       method: :delete, data: {confirm: "Are you sure?"} %>
         </td>
       </tr>
     <% end %>
