--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,15 @@ $navbar-default-bg: #000;
   font-size: 1.7em;
   background-color: #000;
 }
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+.article-body{
+  border-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
 .article-actions {
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
